# meta

./: .bazelrc  .gitignore  .gitlab-ci.yml  ALL_PHASES_SUMMARY.md  ARCHITECTURE.md  BUILD.bazel  COMPLETE_FEATURE_LIST.md  COMPONENT_INVENTORY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISOLATION_AND_SYSTEM_PACKAGES.md  Jenkinsfile  META-REPO.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  MIGRATION_START.md  MIGRATION_SUCCESS.md  NEXT_PHASE_OPTIONS.md  ORGANIZATION_COMPLETE.md  PHASE11_12_13_14_COMPLETE.md  PHASE15_20_COMPLETE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE3_4_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_ENHANCEMENTS.md  PHASE5_6_7_STATUS.md  PHASE6_7_COMPLETE.md  PHASE8_9_10_COMPLETE.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  VERIFICATION_CHECKLIST.md  WORKSPACE  azure-pipelines.yml  (+3 more)
.circleci/: config.yml
docs/: CACHING_AND_STORAGE.md  CHANGESET_SYSTEM.md  CI_CD_GUIDE.md  COMMANDS.md  COMPLETION_REPORT.md  COMPONENT_OPERATIONS.md  CONFIGURATION_MANAGEMENT.md  DEPENDENCY_MANAGEMENT.md  DEVELOPER_EXPERIENCE.md  EXTRACTION_SUMMARY.md  FINAL_COMPLETE_IMPLEMENTATION.md  FINAL_PHASE15_20_SUMMARY.md  HEALTH_AND_MONITORING.md  INTERFACE_CONTRACTS.md  LOCK_FILES_AND_REPRODUCIBILITY.md  MIGRATION_PLAN.md  MIGRATION_START.md  MIGRATION_STATUS.md  PACKAGE_MANAGEMENT.md  PHASE15_20_DOCUMENTATION.md  PHASE1_COMPLETE.md  PHASE1_ENHANCEMENTS.md  PHASE1_FINAL_STATUS.md  PHASE2_COMPLETE.md  PHASE2_ENHANCEMENTS.md  PHASE2_STATUS.md  QUICKSTART.md  (+11 more)
(+229 files in other folders)
