load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "meta",
    srcs = glob(["src/meta/**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        # Dependencies will be added as components are integrated
    ],
)

py_binary(
    name = "cli",
    srcs = ["src/meta/cli.py"],
    deps = [":meta"],
)


